Added the Nashorn JavaScript engine, which is not properly picked up in Eclipse/Bioclipse from Java1.8 at this moment

--- a/plugins/net.bioclipse.scripting/build.properties
+++ b/plugins/net.bioclipse.scripting/build.properties
@@ -14,4 +14,5 @@ bin.includes = META-INF/,\
                libs/,\
                schema/,\
                libs/groovy-all-1.7.2.jar,\
-               libs/jython-2.5.3.jar
+               libs/jython-2.5.3.jar,\
+               libs/nashorn.jar
