--- a/plugins/net.bioclipse.scripting/.classpath
+++ b/plugins/net.bioclipse.scripting/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/jline-0.9.91.jar" sourcepath="net.bioclipse.scriptingsrc.zip"/>
 	<classpathentry kind="lib" path="libs/groovy-all-1.7.2.jar"/>
 	<classpathentry kind="lib" path="libs/jython-2.5.3.jar"/>
+	<classpathentry kind="lib" path="libs/nashorn.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
